data/documentations/numpy/numpy/typing/tests/data/fail/lib_version_pyi.comment
['text':' E: incompatible type','line_number':5,'multiline':False]
['text':' E: Unsupported operand types','line_number':6,'multiline':False]
